# pyviewgui

./: .gitignore  Cargo.toml  README.md  pyproject.toml
pyviewgui/: __init__.py  _pyviewgui.cp314t-win_amd64.pyd  _pyviewgui.pyd
pyviewgui/statics/: default_html.html
pywebgui/: __init__.py
pywebgui/statics/: default_html.html
src/: lib.rs  main.rs
test/: check_gil_status.py  ddddd.py  safe_test.py  test.py
