[package]
name = "pyviewgui"
version = "1.0.2"
edition = "2021"

[lib]
name = "pyviewgui"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "*", features = ["abi3-py311", "extension-module", "multiple-pymethods"] }
tao = "*"
wry = { version = "*", features = ["protocol"] }
image = "*"
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "*", features = ["Win32_UI_Shell", "Win32_System_Com"] }

[features]
default = ["pyo3_backend"]
pyo3_backend = ["pyo3/extension-module"]

[dev-dependencies]
pyo3 = { version = "*", features = ["abi3-py311", "auto-initialize"] }