[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "pywebviewgui"
version = "1.0.0"
description = "A Python library for creating desktop applications with web technologies"
authors = [
    {name = "xzp", email = "x-z-p@foxmail.com"}
]
license = {text = "MIT"}
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
keywords = ["gui", "webview", "desktop", "ui", "frontend"]

[project.urls]
Homepage = "https://github.com/xzp-hub/pywebgui.git"
Repository = "https://github.com/xzp-hub/pywebgui.git"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "pywebgui._pywebgui"

include = [
    "pywebgui/statics/default_html.html",
    "pywebgui/statics/default_icon.png",
]

exclude = [
    "pywebgui/_pywebgui.*.pyd",
    "pywebgui/_pywebgui.*.so",
    "pywebgui/_pywebgui.*.dylib",
]

