[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "pyviewgui"
version = "1.0.0"
description = "A Python library for creating desktop applications with web technologies"
authors = [
    {name = "xzp", email = "x-z-p@foxmail.com"}
]
license = {text = "MIT"}
requires-python = ">=3.11"

keywords = ["gui", "webview", "desktop", "ui", "frontend"]

[project.urls]
Homepage = "https://github.com/xzp-hub/pyviewgui.git"
Repository = "https://github.com/xzp-hub/pyviewgui.git"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "pyviewgui._pyviewgui"

include = [
    "pyviewgui/statics/default_html.html",
    "pyviewgui/statics/default_icon.png",
]

exclude = [
    "pyviewgui/_pyviewgui.*.pyd",
    "pyviewgui/_pyviewgui.*.so",
    "pyviewgui/_pyviewgui.*.dylib",
]

